# mvp_ABM_PharmaSim

./: .gitignore  CMakeLists.txt  README.md  perf-env.yaml  pyproject.toml
.benchmarks/: multi_market_sparse_scenarios_benchmarks
cpp/bindings/: CMakeLists.txt  module.cpp  py_engine_input_owner.hpp
cpp/engine/: CMakeLists.txt  engine_input.hpp  engine_input_make_view.hpp  engine_input_validate.cpp  engine_input_validate.hpp  engine_input_view.hpp  enums.hpp  event_log.hpp  simulation_state.cpp  simulation_state.hpp  simulator.cpp  simulator.hpp
data/: data.json
out_logs/: demo.callgrind  demo.perf.data  demo.perf.data.old  demo_hot.perf.data.old  run_events.csv  run_events.jsonl  run_snapshot_final.json
python/analytics/: __init__.py  fraud.py
python/canonical/: __init__.py  geocoding.py  loaders.py  models.py  normalize.py  pipeline.py  routing.py  scenario_builder.py  transactions.py
python/compiler/: compile.py  enums.py  types.py  validate.py
python/policy/: models.py  scenarios.py  scenarios_large.py  transactions.py
python/runtime/: __init__.py  native_bridge.py  simulation_viz.py
scripts/: debug_simulation.sh  plot_simulation.sh  run_simulation.sh  setup.sh
tests/: bench.py  conftest.py  profile_demo_hot.py  test_canonical_pipeline.py  test_compiler_compile.py  test_compiler_enums.py  test_compiler_validate.py  test_native_bridge.py  test_phase_b_transactions.py  test_scenarios_large.py  test_simulation_dynamics.py  test_simulation_viz.py
