[project]
name = "pharmasim"
version = "0.1.0"
description = "ABM pharma simulation with Python policy + C++ engine"
requires-python = ">=3.11"
dependencies = [
  "nanobind>=2.12.0",
  "numpy>=2.0",
  "pydantic>=2.7",
]
[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]
[build-system]
requires = [
  "scikit-build-core>=0.10",
  "nanobind>=2.0",
]
build-backend = "scikit_build_core.build"
[tool.scikit-build]
# Ninja is preferred; scikit-build-core usually picks it automatically if installed
cmake.args = ["-GNinja"]
# You have Python code under ./python
wheel.packages = ["python"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
